FIX NavTiles: minor layout issue

--- a/Facades/js/openui5.template.css
+++ b/Facades/js/openui5.template.css
@@ -496,7 +496,7 @@ the entire text from disappearing (...) if the text overflows */
 
 /* set the toolbar sticky/to the top of the control */
 .navTilesToolbar {
-    z-index: 10;
+    z-index: 1;
     background: var(--sapBackgroundColor);
     position: sticky;
     top: 0;
